--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "a11y-workflows",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/dominikbauer/a11y-workflows",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/watcher": "^3.23.0",
     "@playwright/test": "^1.56.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
