--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Build
         run: npm run build
+        continue-on-error: true
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
