--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "a11y-workflows",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/dominikbauer/a11y-workflows",
+  "homepage": "https://dominikbauer.github.io/a11y-workflows/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --testPathIgnorePatterns=e2e",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +50,7 @@
     "@axe-core/watcher": "^3.23.0",
     "@playwright/test": "^1.56.0",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
   }
