--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -39,6 +39,7 @@ jobs:
         continue-on-error: true
   build-and-deploy:
     runs-on: ubuntu-latest
+    needs: [e2e]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
