--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "a11y-workflows",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dominikbauer.github.io/a11y-workflows/",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
