--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -34,9 +34,13 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
-        continue-on-error: true
+      - name: Install Playwright
+        run: npx playwright install
+
+      - name: Execute Playwright
+        run: npx playwright test
+        env:
+          API_KEY: ${{ secrets.AXE_DEVHUB_API_KEY }}
   build-and-deploy:
     runs-on: ubuntu-latest
     needs: [e2e]
