--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Execute Playwright
         run: npx playwright test
         env:
-          API_KEY: ${{ secrets.AXE_DEVHUB_API_KEY }}
+          AXE_DEVHUB_API_KEY: ${{ secrets.AXE_DEVHUB_API_KEY }}
   build-and-deploy:
     runs-on: ubuntu-latest
     needs: [e2e]
