--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -41,9 +41,17 @@ jobs:
         run: npx playwright test
         env:
           AXE_DEVHUB_API_KEY: ${{ secrets.AXE_DEVHUB_API_KEY }}
-  build-and-deploy:
+  axe-dev-hub:
     runs-on: ubuntu-latest
     needs: [e2e]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dequelabs/axe-devhub-action@v1
+        with:
+          api_key: ${{ secrets.AXE_DEVHUB_API_KEY }}        
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    needs: [axe-dev-hub]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
