--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -53,7 +53,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     needs: [axe-dev-hub]
-    if: ${{always() && !cancelled() && (success() || !inputs.skip-e2e)}}
+    if: ${{needs.axe-dev-hub.result == 'success' || !inputs.skip-e2e}}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
